# adonai

./: AGENTS.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  SECURITY.md  SUPPORT.md  package.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  early-test-report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
apps/tui/src/: dashboard.ts  index.ts  init.ts  supervisor.ts  theme.ts
crates/adonai-agent/: Cargo.toml
crates/adonai-agent/src/: chat.rs  definition.rs  error.rs  lib.rs  runs.rs  runtime.rs
crates/adonai-cli/: Cargo.toml
crates/adonai-cli/src/: lib.rs  main.rs
crates/adonai-core/: Cargo.toml
crates/adonai-core/src/: engines.rs  hardware.rs  lib.rs  model_plan.rs  policy.rs  supervisor.rs
crates/adonai-supervisor/: Cargo.toml
crates/adonai-supervisor/src/: main.rs
docs/: early-testing.md  install.md
docs/spikes/: g1-g3-implementation-evidence.md
