[package]
name = "adonai-agent"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
adonai-core = { path = "../adonai-core" }
async-trait.workspace = true
reqwest.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
toml = "0.9.7"

[dev-dependencies]
tokio.workspace = true
