[package]
name = "adonai-supervisor"
edition.workspace = true
license.workspace = true
version.workspace = true

[dependencies]
adonai-agent = { path = "../adonai-agent" }
adonai-core = { path = "../adonai-core" }
axum.workspace = true
serde.workspace = true
serde_json.workspace = true
tokio.workspace = true
tower-http.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
